[gd_scene load_steps=3 format=3 uid="uid://bc5070xtgy5m3"]

[ext_resource type="Theme" uid="uid://pt1kdoo3pm8u" path="res://scenes/ui/common/themes/theme.tres" id="1_whglq"]
[ext_resource type="Script" path="res://scenes/ui/title_screen.gd" id="2"]

[node name="TitleScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_whglq")
script = ExtResource("2")

[node name="Background" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="NewGame" type="Button" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
focus_neighbor_top = NodePath("../Exit")
focus_neighbor_bottom = NodePath("../LoadGame")
text = "new game"

[node name="LoadGame" type="Button" parent="HBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../NewGame")
focus_neighbor_bottom = NodePath("../Settings")
text = "load game"

[node name="Settings" type="Button" parent="HBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../LoadGame")
focus_neighbor_bottom = NodePath("../Exit")
text = "options"

[node name="Exit" type="Button" parent="HBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../Settings")
focus_neighbor_bottom = NodePath("../NewGame")
text = "exit"

[node name="SettingsMenu" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 0

[node name="VBoxContainer" type="VBoxContainer" parent="SettingsMenu"]
layout_mode = 0
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Tabs" type="HBoxContainer" parent="SettingsMenu/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="GeneralButton" type="Button" parent="SettingsMenu/VBoxContainer/Tabs"]
visible = false
layout_mode = 2
text = "General"

[node name="VideoButton" type="Button" parent="SettingsMenu/VBoxContainer/Tabs"]
layout_mode = 2
text = "Video"

[node name="AudioButton" type="Button" parent="SettingsMenu/VBoxContainer/Tabs"]
layout_mode = 2
text = "Audio"

[node name="ControlsButton" type="Button" parent="SettingsMenu/VBoxContainer/Tabs"]
layout_mode = 2
text = "Controls"

[node name="SettingsContainer" type="Control" parent="SettingsMenu/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="GeneralContainer" type="GridContainer" parent="SettingsMenu/VBoxContainer/SettingsContainer"]
visible = false
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
columns = 2

[node name="VideoContainer" type="GridContainer" parent="SettingsMenu/VBoxContainer/SettingsContainer"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
columns = 2

[node name="Label" type="Label" parent="SettingsMenu/VBoxContainer/SettingsContainer/VideoContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Vsync"

[node name="CheckButton" type="CheckButton" parent="SettingsMenu/VBoxContainer/SettingsContainer/VideoContainer"]
layout_mode = 2

[node name="Label2" type="Label" parent="SettingsMenu/VBoxContainer/SettingsContainer/VideoContainer"]
layout_mode = 2
text = "Fullscreen"

[node name="OptionButton" type="OptionButton" parent="SettingsMenu/VBoxContainer/SettingsContainer/VideoContainer"]
layout_mode = 2

[node name="Label3" type="Label" parent="SettingsMenu/VBoxContainer/SettingsContainer/VideoContainer"]
layout_mode = 2
text = "Resolution"

[node name="AudioContainer" type="GridContainer" parent="SettingsMenu/VBoxContainer/SettingsContainer"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
columns = 2

[node name="ControlsContainer" type="GridContainer" parent="SettingsMenu/VBoxContainer/SettingsContainer"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
columns = 2

[connection signal="pressed" from="HBoxContainer/NewGame" to="." method="_on_new_game_pressed"]
[connection signal="pressed" from="HBoxContainer/LoadGame" to="." method="_on_load_game_pressed"]
[connection signal="pressed" from="HBoxContainer/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="HBoxContainer/Exit" to="." method="_on_exit_pressed"]
